[package]
name = "cargo-gpui"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Cargo subcommand to scaffold GPUI apps from a template, with backend selection"
repository = "https://github.com/Vanuan/cargo-gpui"
readme = "README.md"

[dependencies]
cargo-generate = "0.23.12"
anyhow = "1"
